dataset1235/2025-2/2868285114/users/1746929503/executions/4269873056_1026882843.log
== SUBMISSION (2025-08-26 22:27:40)
-- CODE: 
raio = float(input())
area = pi * raio ** 2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio ** 2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio ** 2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio ** 2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio ** 2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio ** 2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio ** 2
           ^^
NameError: name 'pi' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:30:07)
-- CODE: 
raio = float(input())
area = 3.5 * raio**2
print(round(area,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.01
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
35.84
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
42.88
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
504.0
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
246.96
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
385.88
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:34:33)
-- CODE: 
raio = float(input())
area =  math.pi * raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =  math.pi * raio**2
            ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =  math.pi * raio**2
            ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =  math.pi * raio**2
            ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =  math.pi * raio**2
            ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =  math.pi * raio**2
            ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =  math.pi * raio**2
            ^^^^
NameError: name 'math' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:28:57)
-- CODE: 
raio = float(input())
area = 3.14 * raio ** 2
print(round(area,4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.0079
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
32.1536
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
38.465
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
452.16
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
221.5584
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
346.185
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 22:30:09)
-- CODE: 
raio = float(input())
area = 3.5 * raio**2
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.01
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
35.84
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
42.88
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
504.0
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
246.96
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
385.88
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:33:28)
-- CODE: 
raio = float(input())
area =  numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =  numero ** 2
            ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =  numero ** 2
            ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =  numero ** 2
            ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =  numero ** 2
            ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =  numero ** 2
            ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =  numero ** 2
            ^^^^^^
NameError: name 'numero' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:34:16)
-- CODE: 
raio = float(input())
area =  math.pi * raio ** 2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =  math.pi * raio ** 2
            ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =  math.pi * raio ** 2
            ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =  math.pi * raio ** 2
            ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =  math.pi * raio ** 2
            ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =  math.pi * raio ** 2
            ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =  math.pi * raio ** 2
            ^^^^
NameError: name 'math' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:31:20)
-- CODE: 
raio = float(input())
area = 3.1419 * raio ** 2
print(round(area,4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.0079
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
32.1731
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
38.4883
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
452.4336
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
221.6925
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
346.3945
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:34:58)
-- CODE: 
import math


raio = float(input())
area =  math.pi * raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.0079
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
32.1699
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
38.4845
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
452.3893
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
221.6708
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
346.3606
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:28:59)
-- CODE: 
raio = float(input())
area = 3.14 * raio ** 2
print(round(area,4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.0079
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
32.1536
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
38.465
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
452.16
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
221.5584
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
346.185
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:34:15)
-- CODE: 
raio = float(input())
area =  math.pi * raio ** 2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =  math.pi * raio ** 2
            ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =  math.pi * raio ** 2
            ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =  math.pi * raio ** 2
            ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =  math.pi * raio ** 2
            ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =  math.pi * raio ** 2
            ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =  math.pi * raio ** 2
            ^^^^
NameError: name 'math' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:28:31)
-- CODE: 
raio = float(input())
area = 3.14 * raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.0079
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
32.1536
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
38.465
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
452.16
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
221.5584
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
346.185
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:31:53)
-- CODE: 
raio = float(input())
area = 3.143 * raio ** 2
print(round(area,4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.0079
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
32.1843
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
38.5017
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
452.592
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
221.7701
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
346.5157
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:32:17)
-- CODE: 
raio = float(input())
area = 8.4 * raio ** 2
print(round(area,4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.021
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
86.016
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
102.9
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
1209.6
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
592.704
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
926.1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:31:38)
-- CODE: 
raio = float(input())
area = 3.1409 * raio ** 2
print(round(area,4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.0079
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
32.1628
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
38.476
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
452.2896
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
221.6219
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
346.2842
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 22:27:42)
-- CODE: 
raio = float(input())
area = pi * raio ** 2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio ** 2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio ** 2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio ** 2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio ** 2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio ** 2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio ** 2
           ^^
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:30:31)
-- CODE: 
raio = float(input())
area = 3.5 * raio ** 2
print(round(area,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.01
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
35.84
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
42.88
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
504.0
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
246.96
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
385.88
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:30:46)
-- CODE: 
raio = float(input())
area = 3.5 * raio ** 2
print(round(area,4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.0088
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
35.84
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
42.875
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
504.0
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
246.96
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
385.875
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
